Added support the Lis331 accelerometer

--- a/InclinometerDemo/Makefile
+++ b/InclinometerDemo/Makefile
@@ -1,5 +1,6 @@
 COMPONENT=InclinometerDemoAppC
-
+#CFLAGS+=-DLIS331_DEBUG
+CFLAGS+=-DINCLINOMETER_DEBUG
 BUILD_EXTRA_DEPS = InclinometerDemo.py Constants.py
 CLEAN_EXTRA = InclinometerDemo.py Constants.py
 
