Implement sensing and actuation

--- a/Icra2015Expt/MCR/Makefile
+++ b/Icra2015Expt/MCR/Makefile
@@ -1,3 +1,4 @@
 COMPONENT=Icra2015ExptAppC
-CFLAGS+=-I../include/
+CFLAGS+=-I../include/ -IMotorTest
+CFLAGS+=-DLOW_POWER_LISTENING
 include $(MAKERULES)
