--- a/DrugDelivery/MCR/Makefile
+++ b/DrugDelivery/MCR/Makefile
@@ -1,4 +1,4 @@
 COMPONENT=DrugDeliveryAppC
-CFLAGS+=-I../include/ -IMotorTest
+CFLAGS+=-I../include/ -IMotorTest -I../DrugScheduler
 #CFLAGS+=-DLOW_POWER_LISTENING
 include $(MAKERULES)
